--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,12 +45,34 @@
                 android:orientation="vertical">
 
                 <EditText
+                    android:id="@+id/txtFirstname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/custom_input"
+                    android:drawableStart="@drawable/custom_user_icon"
+                    android:drawablePadding="10dp"
+                    android:hint="@string/firstname"
+                    android:padding="12dp" />
+
+                <EditText
+                    android:id="@+id/txtLastname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_input"
+                    android:drawableStart="@drawable/custom_user_icon"
+                    android:drawablePadding="10dp"
+                    android:hint="@string/lastname"
+                    android:padding="12dp" />
+
+                <EditText
                     android:id="@+id/txtEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_input"
                     android:drawableStart="@drawable/custom_email_icon"
                     android:drawablePadding="10dp"
+                    android:layout_marginTop="10dp"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:padding="12dp" />
@@ -62,40 +84,36 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/custom_input"
                     android:drawableStart="@drawable/custom_lock_icon"
+
                     android:drawablePadding="10dp"
                     android:hint="@string/contraseña"
                     android:inputType="textPassword"
                     android:padding="12dp" />
 
-                <TextView
-                    android:id="@+id/txtForgot"
+                <EditText
+                    android:id="@+id/txtGenre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
                     android:layout_marginTop="10dp"
-                    android:text="@string/forgot_password"/>
+                    android:background="@drawable/custom_input"
+                    android:drawableStart="@drawable/custom_genre_icon"
+                    android:drawableEnd="@drawable/arrow_down"
+                    android:drawablePadding="10dp"
+                    android:hint="@string/genre"
+                    android:inputType="textNoSuggestions"
+                    android:focusable="false"
+                    android:padding="12dp"
+                    />
 
+                <Spinner
+                    android:id="@+id/genre"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@null"
+                    android:layout_marginBottom="30dp"/>
 
             </LinearLayout>
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <CheckBox android:id="@+id/remember_me"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remember_me"
-                    android:buttonTint="@color/purple_700"
-                    android:onClick="onCheckboxClicked"/>
-
-                <CheckBox android:id="@+id/terms_and_conditions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:buttonTint="@color/purple_700"
-                    android:text="@string/terms_and_conditions"
-                    android:onClick="onCheckboxClicked"/>
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -105,17 +123,6 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/btnSignIn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_rounded"
-                    android:onClick="onClick"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp"
-                    android:text="@string/iniciar_sesion"
-                    android:textColor="@color/colorWhite" />
-
-                <Button
                     android:id="@+id/btnRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -123,9 +130,21 @@
                     android:onClick="onClick"
                     android:paddingLeft="40dp"
                     android:paddingRight="40dp"
-                    android:layout_marginTop="20dp"
                     android:text="@string/register"
                     android:textColor="@color/colorWhite" />
+
+                <Button
+                    android:id="@+id/btnSignIn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_rounded"
+                    android:onClick="onClick"
+                    android:paddingLeft="40dp"
+                    android:layout_marginTop="20dp"
+                    android:paddingRight="40dp"
+                    android:text="@string/iniciar_sesion"
+                    android:textColor="@color/colorWhite" />
+
             </LinearLayout>
 
         </LinearLayout>
