--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -45,21 +45,10 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/txtEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/custom_email_icon"
-                    android:drawablePadding="10dp"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    android:padding="12dp" />
-
-                <EditText
                     android:id="@+id/txtPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="40dp"
                     android:background="@drawable/custom_input"
                     android:drawableStart="@drawable/custom_lock_icon"
                     android:drawablePadding="10dp"
@@ -67,66 +56,32 @@
                     android:inputType="textPassword"
                     android:padding="12dp" />
 
-                <TextView
-                    android:id="@+id/txtForgot"
+                <EditText
+                    android:id="@+id/txtConfirmPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/forgot_password"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <CheckBox android:id="@+id/remember_me"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remember_me"
-                    android:buttonTint="@color/purple_700"
-                    android:onClick="onCheckboxClicked"/>
-
-                <CheckBox android:id="@+id/terms_and_conditions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:buttonTint="@color/purple_700"
-                    android:text="@string/terms_and_conditions"
-                    android:onClick="onCheckboxClicked"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:orientation="vertical">
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/custom_input"
+                    android:drawableStart="@drawable/custom_lock_icon"
+                    android:drawablePadding="10dp"
+                    android:hint="@string/confirm_password"
+                    android:inputType="textPassword"
+                    android:padding="12dp" />
 
                 <Button
-                    android:id="@+id/btnSignIn"
+                    android:id="@+id/btnUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
                     android:background="@drawable/button_rounded"
                     android:onClick="onClick"
                     android:paddingLeft="40dp"
                     android:paddingRight="40dp"
-                    android:text="@string/iniciar_sesion"
+                    android:text="@string/update_password"
                     android:textColor="@color/colorWhite" />
 
-                <Button
-                    android:id="@+id/btnRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_rounded"
-                    android:onClick="onClick"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/register"
-                    android:textColor="@color/colorWhite" />
             </LinearLayout>
+
 
         </LinearLayout>
 
