--- a/app/src/main/res/layout/activity_geometria.xml
+++ b/app/src/main/res/layout/activity_geometria.xml
@@ -6,4 +6,115 @@
     android:layout_height="match_parent"
     tools:context=".GeometriaActivity">
 
+    <TextView
+        android:id="@+id/texto_informativo"
+        android:layout_width="359dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="31dp"
+        android:text="@string/texto_informativo"
+        android:textColor="#686C6C"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="49dp"
+        android:text="@string/textox"
+        android:textColor="#686C6C"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/texto_informativo" />
+
+    <TextView
+        android:id="@+id/textoy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="186dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="70dp"
+        android:text="@string/textoy"
+        android:textColor="#686C6C"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textox"
+        app:layout_constraintTop_toBottomOf="@+id/texto_informativo" />
+
+    <EditText
+        android:id="@+id/puntox1"
+        android:layout_width="155dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:inputType="numberSigned|number|numberDecimal"
+        android:background="@drawable/custom_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textox" />
+
+    <EditText
+        android:id="@+id/puntox2"
+        android:layout_width="159dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:background="@drawable/custom_input"
+        android:inputType="numberSigned|number|numberDecimal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/puntox1" />
+
+    <EditText
+        android:id="@+id/puntoy1"
+        android:layout_width="163dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:background="@drawable/custom_input"
+        android:inputType="numberSigned|number|numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textoy" />
+
+    <EditText
+        android:id="@+id/puntoy2"
+        android:layout_width="164dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="15dp"
+        android:ems="10"
+        android:background="@drawable/custom_input"
+        android:inputType="numberSigned|number|numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/puntoy1" />
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="115dp"
+        android:layout_marginBottom="278dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/puntox2" />
+
+    <Button
+        android:id="@+id/calculargeoBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="108dp"
+        android:background="@drawable/button_rounded"
+        android:text="@string/calculargeo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
