--- a/app/src/main/res/layout/activity_fisica.xml
+++ b/app/src/main/res/layout/activity_fisica.xml
@@ -52,6 +52,7 @@
                 android:layout_marginEnd="130dp"
                 android:gravity="center"
                 android:text="@string/fuerza"
+                android:background="@drawable/button_rounded"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -64,6 +65,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="130dp"
                 android:text="@string/velocidad"
+                android:background="@drawable/button_rounded"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnFuerza" />
@@ -76,6 +78,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="130dp"
                 android:text="@string/voltaje"
+                android:background="@drawable/button_rounded"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnVelocidad" />
