--- a/app/src/main/res/layout/activity_fuerza.xml
+++ b/app/src/main/res/layout/activity_fuerza.xml
@@ -84,8 +84,12 @@
             <EditText
                 android:id="@+id/editTextMasa"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:ems="10"
+                android:drawablePadding="10dp"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/custom_input"
                 android:inputType="number|numberDecimal" />
 
             <LinearLayout
@@ -98,20 +102,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginTop="10dp"
                     android:text="@string/aceleracion" />
 
                 <TextView
                     android:id="@+id/textView23"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:text=":" />
             </LinearLayout>
 
             <EditText
                 android:id="@+id/editTextAceleracion"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:ems="10"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/custom_input"
                 android:inputType="number|numberDecimal" />
 
             <LinearLayout
@@ -148,6 +157,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/button_rounded"
             android:text="@string/calcular" />
 
         <Button
@@ -155,6 +165,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/button_rounded"
             android:text="@string/borrardatos" />
     </LinearLayout>
 
