--- a/app/src/main/res/layout/activity_matematicas.xml
+++ b/app/src/main/res/layout/activity_matematicas.xml
@@ -19,46 +19,43 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/matematicas"
-            android:textSize="32sp" />
+            android:textSize="30dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.5"
+        android:layout_weight="0.8"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/numero_uno"
-            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/edtn1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number|numberDecimal" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/numero_dos"
-            android:textSize="24sp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/custom_input"
+            android:drawablePadding="10dp"
+            android:layout_marginBottom="10dp"
+            android:textAllCaps="true"
+            android:padding="12dp"
+            android:hint="@string/numero_uno"
+            android:layout_marginHorizontal="10dp"
+            android:inputType="number|numberDecimal|numberSigned" />
 
         <EditText
             android:id="@+id/edtn2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number|numberDecimal" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_input"
+            android:drawablePadding="10dp"
+            android:layout_marginBottom="10dp"
+            android:textAllCaps="true"
+            android:hint="@string/numero_dos"
+            android:padding="12dp"
+            android:layout_marginHorizontal="10dp"
+            android:inputType="number|numberDecimal|numberSigned" />
     </LinearLayout>
 
     <LinearLayout
@@ -96,7 +93,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.05"
+        android:layout_weight="0.9"
         android:orientation="horizontal">
 
         <Button
@@ -104,6 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/button_rounded"
             android:text="@string/calcular" />
 
         <Button
@@ -111,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/button_rounded"
             android:text="@string/borrardato" />
     </LinearLayout>
 
