--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,19 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/mnugeometria"
-        android:title="Geometria" />
-    <item
-        android:id="@+id/mnuquimica"
-        android:title="Quimica">
-        <menu >
-            <item
-                android:id="@+id/mnuinorganica"
-                android:title="Inorganica" />
-            <item
-                android:id="@+id/mnuorganica"
-                android:title="Organica" />
-        </menu>
-    </item>
-</menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"/>
